# fridai

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: build-order.md
scripts/: embed_smoke.py
src/fridai/: __init__.py  cli.py  server.py
src/fridai/core/: config.py  embeddings.py  models.py  redact.py  search.py  store.py
src/fridai/core/sources/: __init__.py  agent_recall.py  claude_recall.py  code.py  codex_recall.py  commits.py  gemini_recall.py  notes.py
tests/: __init__.py  test_agent_recall.py  test_claude_recall.py  test_cli.py  test_code.py  test_codex_recall.py  test_commits.py  test_embeddings.py  test_gemini_recall.py  test_index.py  test_notes.py  test_redact.py  test_search.py  test_server.py  test_store.py
