[project]
name = "fridai"
version = "0.1.0"
description = "fridai MCP 서버 — 과거 코드·커밋·AI 대화 기록을 100% 로컬에서 회수(검색 전용, 로컬 LLM 불필요)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# numpy(벡터 검색 가속), fastembed(onnx 로컬 임베딩, torch 불필요), mcp(서버 SDK).
dependencies = ["numpy>=1.21", "fastembed>=0.3", "mcp>=1.0"]

[project.scripts]
fridai = "fridai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fridai"]
