[project]
name = "fridai"
version = "0.3.0"
description = "Local MCP server for recalling past code, commits, and AI conversations — search-only, no local LLM required"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Chloe Jungah Kim", email = "hiyaku0317@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]
# numpy (vector search), fastembed (local ONNX embeddings, no torch), mcp (server SDK).
dependencies = ["numpy>=1.21", "fastembed>=0.3", "mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/chloeeekim/fridai"
Repository = "https://github.com/chloeeekim/fridai"
Issues = "https://github.com/chloeeekim/fridai/issues"

[project.scripts]
fridai = "fridai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fridai"]
